syntax = "proto3";

option go_package = "github.com/Galaxy-Railway/GGargantua/api/protobuf";

package GGargantua.v1.proto;

message ListOfString{
  repeated string Strings = 1;
}

