syntax = "proto3";

option go_package="api/protobuf/request_pb";

package GGargantua.v1.request;

import "google/protobuf/timestamp.proto";

message HttpRequest {
  string Method = 1;
  string Url = 2;
  map<string, string> Headers = 3;
  map<string, string> Params = 4;
  bytes Body = 5;
}

message HttpResponse {
  string Body = 1;
  map<string, string> Cookies = 2;
  map<string, string> Headers = 3;
  int32 Status = 4;
  string StartTime = 5;
  google.protobuf.Timestamp FistByteTime = 6;
  google.protobuf.Timestamp CompleteTime = 7;
}